# my-app

./: .MANIFEST.in.swp  .MANIFEST_LOCAL_12579.in.swp  .MANIFEST_REMOTE_12579.in.swp  .env  MANIFEST.in  MANIFEST_BACKUP_14470.in  README.MD  README.md  pyproject.toml  scrape_upgrade.spec  setup.py  soluzka is a boss
advanced_scraper.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
backups/: scrape_upgrade.py
templates/: index.html
